Fix issue #26 where caption for an image always has vertical and horizontal scroll bars even they are not required

--- a/src/components/Widgets/Widgets.module.css
+++ b/src/components/Widgets/Widgets.module.css
@@ -26,7 +26,7 @@
   width: 100%;
   max-width: 100%;
   max-height: 100%;
-  overflow: scroll;
+  overflow: auto;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -41,6 +41,7 @@
   padding: 5px;
   opacity: 0.75;
   height: min-content;
+  white-space: pre;
 }
 
 .shadow {
